src/renderer/src/styles/base/_base.sass
/*
 * ========================================================
 * base/base
 * ========================================================
 */

// 1. Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.
// 2. Change the default tap highlight to be completely transparent in iOS.
// 3. Remove the margin in all browsers.
// 4. Set an explicit initial text-align value so that we can later use the the `inherit` value on things like `<th>` elements.
// 5. Disable bouncing scroll.

*,
*::before,
*::after
  box-sizing: inherit
  cursor: default

html
  box-sizing: border-box
  overflow: hidden // [5]
  font: $fw-body #{$fs-body}/#{$lh-body} $font-stack
  letter-spacing: -.08px
  -webkit-font-smoothing: antialiased

  -webkit-text-size-adjust: 100% // [1]
  -webkit-tap-highlight-color: rgba($black, 0) // [2]
  user-select: none

  [contenteditable]
    user-select: text

body
  color: var(--color-text)
  margin: 0 // [3]
  text-align: left // [4]

